* fix sarfari 9 flex bug causing registers to overlap if screen is too small * Add hidden class for registers via sass partial

--- a/sass/px-vis-pie-chart.scss
+++ b/sass/px-vis-pie-chart.scss
@@ -21,12 +21,9 @@
 @import "px-flexbox-design/_base.flexbox.scss";
 
 
-:host {
-  width: 100%;
-  height: 100%;
-}
+@import "px-vis/_px-vis-chart-partial.scss";
 
-.wrapper {
+:host {
   width: 100%;
   height: 100%;
 }
